--- a/examples/relative-path-with-single-output/source/index.css
+++ b/examples/relative-path-with-single-output/source/index.css
@@ -45,5 +45,5 @@ div:before {
 	margin-top: 10px;
 	margin-left: 10px;
 	color: #fff;
-	content: "file-loader / examples / use-relative-path";
+	content: "file-loader / examples / use-relative-path-single-output";
 }
